--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
           <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <img src="img/project-twitter.png" class="img-fluid rounded-start" alt="...">
+                <img src="Img/project-twitter.png" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -73,7 +73,7 @@
         <div class="card mb-3">
           <div class="row">
               <div class="col-md-4">
-                  <img src="img/project-netflix.png" class="img-fluid rounded-start" alt="...">
+                  <img src="Img/project-netflix.png" class="img-fluid rounded-start" alt="...">
                 </div>
               <div class="col-md-8">
                   <div class="card-body">
